增加DEMO切换和停止，增加Rainyday的各动作类型转换

--- a/RainDayForUAP/RainDayForUAP.csproj
+++ b/RainDayForUAP/RainDayForUAP.csproj
@@ -117,8 +117,10 @@
     <None Include="RainDayForUAP_TemporaryKey.pfx" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Images\bg1.jpg" />
-    <Content Include="Images\bg2.jpg" />
+    <Content Include="Images\demo2.jpg" />
+    <Content Include="Images\demo1.jpg" />
+    <Content Include="Images\demo3.jpg" />
+    <Content Include="Images\demo4.jpg" />
     <Content Include="Properties\Default.rd.xml" />
     <Content Include="Assets\LockScreenLogo.scale-200.png" />
     <Content Include="Assets\SplashScreen.scale-200.png" />
